2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added more extensions for fortran programs,
	patch by John Spray, fixes #2623

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: marked image/x-eps as a subclass of 
	  PostScript files, fix part of bug #2686

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added *.hpp glob to C++ headers, fixes #2923

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* update-mime-database.c: (my_xmlGetNsProp), (get_type),
	(match_node), (get_priority), (add_namespace),
	(process_freedesktop_node), (has_lang), (remove_old), (load_type),
	(load_source_file), (atomic_update), (match_offset),
	(match_value_and_mask), (match_word_size), (build_matches),
	(add_ns), (add_alias), (write_header), (write_magic_cache):
	fix signedness warnings in gcc, maybe it would be better to just
	disable that warning

2005-04-15  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "zh_TW" (traditional Chinese) to ALL_LINGUAS.

2005-04-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
	* freedesktop.org.xml.in: added application/x-cue as the CD image
	cuesheet mime-type

2005-04-14  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "rw" (Kinyarwanda) to ALL_LINGUAS.

Fri Apr  8 23:34:27 2005  Jonathan Blandford  <jrb@redhat.com>

	* update-mime-database.c: Patch from Matthias Clasen
	<mclasen@redhat.com> to adjust one offset after adding the
	namespace table.  Produced cache now works.

2005-04-07  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: work-around for old versions of automake

Fri Apr  1 14:33:54 2005  Jonathan Blandford  <jrb@redhat.com>

	* shared-mime-info-spec.xml:
	* update-mime-database.c: Patch from Matthias Clasen
	<mclasen@redhat.com> to make the MIME Cache contain an mmappable
	binary format.

=== shared-mime-info 0.16 ===