@@ -178,6 +178,13 @@ command to generate the output files.
     <_comment>XML User Interface Language document</_comment>
     <glob pattern="*.xul"/>
   </mime-type>
+  <mime-type type="application/vnd.ms-access">
+    <comment>Microsoft Access Jet Database</comment>
+    <magic priority="50">
+      <match offset="0" type="string" value="\x00\x01\x00\x00Standard Jet DB" />
+    </magic>
+    <glob pattern="*.mdb" />
+ </mime-type>
  <mime-type type="application/vnd.ms-excel">
     <_comment>Microsoft Excel spreadsheet</_comment>
     <magic priority="50">
