@@ -1,5 +1,10 @@
 2005-04-16  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: added application/vnd.ms-access, patch from
+	Ed Catmur, fixes bug #2619
+
+2005-04-16  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: added more extensions for fortran programs,
 	patch by John Spray, fixes #2623
 
